UI updates new shooting system etc..

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;800&family=Rajdhani:wght@400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css?v=20241222231400">
+    <link rel="stylesheet" href="css/style.css?v=20241223004700">
 </head>
 
 <body>
@@ -129,6 +129,10 @@
                             <div id="fuel-bar" class="bar-fill fuel-fill"></div>
                         </div>
                         <span id="fuel-text">50</span>
+                    </div>
+                    <div class="hud-item armor" id="armor-display" style="display: none;">
+                        <span class="hud-icon">🛡️</span>
+                        <span id="armor-text">0</span>
                     </div>
                 </div>
 
@@ -302,10 +306,10 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/game.js?v=20241222231400"></script>
-    <script src="js/network.js?v=20241222231400"></script>
-    <script src="js/ui.js?v=20241222231400"></script>
-    <script src="js/main.js?v=20241222231400"></script>
+    <script src="js/game.js?v=20241223004700"></script>
+    <script src="js/network.js?v=20241223004700"></script>
+    <script src="js/ui.js?v=20241223004700"></script>
+    <script src="js/main.js?v=20241223004700"></script>
 </body>
 
 </html>
