--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;800&family=Rajdhani:wght@400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css?v=20241224194500">
+    <link rel="stylesheet" href="css/style.css?v=20241224200000">
 </head>
 
 <body>
@@ -39,17 +39,7 @@
                     <input type="text" id="player-name" placeholder="Adını gir..." maxlength="15">
                     <div class="color-picker">
                         <label>Tank Rengi:</label>
-                        <div class="color-options" id="color-options">
-                            <button class="color-option selected" data-color="#ef4444"
-                                style="background: #ef4444;"></button>
-                            <button class="color-option" data-color="#3b82f6" style="background: #3b82f6;"></button>
-                            <button class="color-option" data-color="#22c55e" style="background: #22c55e;"></button>
-                            <button class="color-option" data-color="#f59e0b" style="background: #f59e0b;"></button>
-                            <button class="color-option" data-color="#a855f7" style="background: #a855f7;"></button>
-                            <button class="color-option" data-color="#ec4899" style="background: #ec4899;"></button>
-                            <button class="color-option" data-color="#06b6d4" style="background: #06b6d4;"></button>
-                            <button class="color-option" data-color="#f97316" style="background: #f97316;"></button>
-                        </div>
+                        <input type="color" id="tank-color" value="#ef4444" class="color-input">
                     </div>
                 </div>
 
@@ -335,10 +325,10 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/game.js?v=20241224194500"></script>
-    <script src="js/network.js?v=20241224194500"></script>
-    <script src="js/ui.js?v=20241224194500"></script>
-    <script src="js/main.js?v=20241224194500"></script>
+    <script src="js/game.js?v=20241224200000"></script>
+    <script src="js/network.js?v=20241224200000"></script>
+    <script src="js/ui.js?v=20241224200000"></script>
+    <script src="js/main.js?v=20241224200000"></script>
 </body>
 
 </html>
