--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;800&family=Rajdhani:wght@400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css?v=20241224200000">
+    <link rel="stylesheet" href="css/style.css?v=20241224202800">
 </head>
 
 <body>
@@ -243,13 +243,29 @@
                                 </div>
                                 <span class="item-price">💰 300</span>
                             </div>
-                            <div class="market-item" data-type="weapon" data-id="napalm">
-                                <span class="item-icon">🔥</span>
+                            <div class="market-item" data-type="weapon" data-id="splash">
+                                <span class="item-icon">💥</span>
                                 <div class="item-info">
-                                    <span class="item-name">Napalm</span>
-                                    <span class="item-desc">Yanma hasarı</span>
+                                    <span class="item-name">Splash Bomb</span>
+                                    <span class="item-desc">Geniş sıçrama alanı</span>
                                 </div>
-                                <span class="item-price">💰 200</span>
+                                <span class="item-price">💰 150</span>
+                            </div>
+                            <div class="market-item" data-type="weapon" data-id="sniper">
+                                <span class="item-icon">🔫</span>
+                                <div class="item-info">
+                                    <span class="item-name">Sniper Shot</span>
+                                    <span class="item-desc">Hassas, yüksek hasar</span>
+                                </div>
+                                <span class="item-price">💰 120</span>
+                            </div>
+                            <div class="market-item" data-type="weapon" data-id="cluster">
+                                <span class="item-icon">🧨</span>
+                                <div class="item-info">
+                                    <span class="item-name">Cluster Bomb</span>
+                                    <span class="item-desc">5 parçaya ayrılır</span>
+                                </div>
+                                <span class="item-price">💰 250</span>
                             </div>
                         </div>
                     </div>
@@ -325,10 +341,10 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/game.js?v=20241224200000"></script>
-    <script src="js/network.js?v=20241224200000"></script>
-    <script src="js/ui.js?v=20241224200000"></script>
-    <script src="js/main.js?v=20241224200000"></script>
+    <script src="js/game.js?v=20241224202800"></script>
+    <script src="js/network.js?v=20241224202800"></script>
+    <script src="js/ui.js?v=20241224202800"></script>
+    <script src="js/main.js?v=20241224202800"></script>
 </body>
 
 </html>
