--- a/public/index.html
+++ b/public/index.html
@@ -214,6 +214,21 @@
             </div>
         </div>
 
+        <!-- Chat Overlay -->
+        <div id="chat-overlay" class="chat-overlay">
+            <div id="chat-messages" class="chat-messages"></div>
+            <div class="emoji-bar">
+                <button class="emoji-btn" data-emoji="👍">👍</button>
+                <button class="emoji-btn" data-emoji="👎">👎</button>
+                <button class="emoji-btn" data-emoji="😂">😂</button>
+                <button class="emoji-btn" data-emoji="😡">😡</button>
+                <button class="emoji-btn" data-emoji="😱">😱</button>
+                <button class="emoji-btn" data-emoji="👏">👏</button>
+                <button class="emoji-btn" data-emoji="💀">💀</button>
+                <button class="emoji-btn" data-emoji="🏳️">🏳️</button>
+            </div>
+        </div>
+
         <!-- Market/Shop Screen (Overlay) -->
         <div id="market-screen" class="overlay">
             <div class="overlay-content market-content">
